--- a/plugins/SlideExplorer/src/org/micromanager/slideexplorer/ControlButtonsPanel.form
+++ b/plugins/SlideExplorer/src/org/micromanager/slideexplorer/ControlButtonsPanel.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JPanelFormInfo">
   <Properties>
@@ -52,7 +52,7 @@
               <Component id="jComboBox1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="clearROIsButton" min="-2" pref="95" max="-2" attributes="1"/>
-              <EmptySpace pref="89" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -135,17 +135,14 @@
         <Property name="toolTipText" type="java.lang.String" value="Configure the slide explorer"/>
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
-      <AccessibilityProperties>
-        <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value="Configure the slide explorer"/>
-      </AccessibilityProperties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="configureButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="mosaicButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="5D Acq"/>
-        <Property name="toolTipText" type="java.lang.String" value="Acquire tiled 5D images of one or more ROIs."/>
+        <Property name="text" type="java.lang.String" value="ROIs-&gt;Posns"/>
+        <Property name="toolTipText" type="java.lang.String" value="Creates tiles from ROIs and sends to position list."/>
         <Property name="focusable" type="boolean" value="false"/>
       </Properties>
       <Events>
