use MAC (physical ethernet) address for file name to write the report in. IP address, for what's worth, is still recorded inside the report.
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6658 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/ReportProblemDialog.form
+++ b/mmstudio/src/org/micromanager/ReportProblemDialog.form
@@ -36,19 +36,19 @@
                       </Group>
                       <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="emailText_" alignment="0" pref="510" max="32767" attributes="1"/>
-                          <Component id="organization_" alignment="0" pref="510" max="32767" attributes="1"/>
+                          <Component id="emailText_" alignment="0" pref="550" max="32767" attributes="1"/>
+                          <Component id="organization_" alignment="0" pref="550" max="32767" attributes="1"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-                      <Component id="jScrollPane2" pref="506" max="32767" attributes="3"/>
+                      <Component id="jScrollPane2" max="32767" attributes="3"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" pref="648" max="32767" attributes="0"/>
+                      <Component id="jScrollPane1" pref="668" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="258" max="-2" attributes="0"/>
@@ -64,11 +64,11 @@
               <Component id="sendButton_" min="-2" pref="145" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="138" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" alignment="1" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="102" max="-2" attributes="0"/>
-              <Component id="name_" pref="510" max="32767" attributes="1"/>
+              <EmptySpace min="-2" pref="91" max="-2" attributes="0"/>
+              <Component id="name_" pref="550" max="32767" attributes="1"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -102,14 +102,13 @@
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="jScrollPane1" min="-2" pref="132" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
                       <Component id="clearButton_" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="sendButton_" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="cancelButton_" alignment="3" min="-2" max="-2" attributes="0"/>
