MultiCamera: Fixed bug with EM gain not always updating.  Also check for presence of ADCONVERTER
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6773 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
+++ b/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
@@ -302,6 +302,7 @@
       </Properties>
       <Events>
         <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="modeComboBoxItemStateChanged"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="modeComboBoxActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
